<resources>
    <string name="app_name">Picfy</string>
    <string name="title_home">Home</string>
    <string name="title_conta">Conta</string>
    <string name="title_ubs">UBS</string>
    <string name="title_glossario">Glossario</string>
    <string name="title_ajuda">Ajuda</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
</resources>
