<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/home"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_conta"
        android:icon="@drawable/account"
        android:title="@string/title_conta" />

    <item
        android:id="@+id/navigation_ubs"
        android:icon="@drawable/map_marker_check"
        android:title="@string/title_ubs" />
    <item
        android:id="@+id/navigation_glossario"
        android:icon="@drawable/book_open_variant"
        android:title="@string/title_glossario" />

    <item
        android:id="@+id/navigation_ajuda"
        android:icon="@drawable/comment_question"
        android:title="@string/title_ajuda" />

</menu>
